version/0.11/_sources/examples/simulator/doc_EP-mechanics_simulator_fullheart_rodero.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\simulator\doc_EP-mechanics_simulator_fullheart_rodero.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_simulator_doc_EP-mechanics_simulator_fullheart_rodero.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_simulator_doc_EP-mechanics_simulator_fullheart_rodero.py:


Full heart EP-mechanics
-----------------------
This example shows you how to consume a full heart model and
set it up for a coupled electromechanical simulation.

.. GENERATED FROM PYTHON SOURCE LINES 32-41

Example setup
-------------
before computing the fiber orientation, purkinje network we need to load
the required modules, load a heart model and set up the simulator.

Perform the required imports
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the required modules and set relevant paths, including that of the working
directory, model, and ls-dyna executable.

.. GENERATED FROM PYTHON SOURCE LINES 41-53

.. code-block:: Python



    import os
    from pathlib import Path

    from pint import Quantity

    import ansys.heart.core.models as models
    from ansys.heart.core.settings.material.ep_material import EPMaterial
    from ansys.heart.core.settings.material.material import ISO, Mat295
    from ansys.heart.core.simulator import DynaSettings, EPMechanicsSimulator


.. GENERATED FROM PYTHON SOURCE LINES 58-64

Example setup
-------------
Perform the required imports
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Import the required modules and set relevant paths, including that of the working
directory and generated model

.. GENERATED FROM PYTHON SOURCE LINES 64-75

.. code-block:: Python



    # accept dpf license agreement
    # https://dpf.docs.pyansys.com/version/stable/getting_started/licensing.html#ref-licensing
    os.environ["ANSYS_DPF_ACCEPT_LA"] = "Y"

    # set working directory and path to model. Note that we assume here that that there is a
    # preprocessed model called "heart_model.vtu" available in the working directory.
    workdir = Path.home() / "pyansys-heart" / "downloads" / "Rodero2021" / "01" / "FullHeart"
    path_to_model = str(workdir / "heart_model.vtu")


.. GENERATED FROM PYTHON SOURCE LINES 79-81

Load the full heart model
~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 81-87

.. code-block:: Python


    # instantiate a four chamber model
    model: models.FullHeart = models.FullHeart(working_directory=workdir)
    model.load_model_from_mesh(path_to_model, path_to_model.replace(".vtu", ".partinfo.json"))



.. GENERATED FROM PYTHON SOURCE LINES 88-91

Instantiate the simulator object
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
instantiate the simulator and settings appropriately.

.. GENERATED FROM PYTHON SOURCE LINES 91-145

.. code-block:: Python


    # instantaiate dyna settings of choice
    lsdyna_path = r"your_dyna_exe"  # tested with DEV-111820
    dyna_settings = DynaSettings(
        lsdyna_path=lsdyna_path, dynatype="intelmpi", platform="wsl", num_cpus=6
    )

    # instantiate simulator object
    simulator = EPMechanicsSimulator(
        model=model,
        dyna_settings=dyna_settings,
        simulation_directory=os.path.join(workdir, "ep-mechanics"),
    )

    # load default simulation settings
    simulator.settings.load_defaults()

    # compute fiber orientation in the ventricles and atria
    simulator.compute_fibers()
    simulator.compute_left_atrial_fiber()
    simulator.compute_right_atrial_fiber(appendage=[39, 29, 98])

    # switch atria to active
    simulator.model.left_atrium.fiber = True
    simulator.model.left_atrium.active = True

    simulator.model.right_atrium.fiber = True
    simulator.model.right_atrium.active = True

    ## Optionally, we can create more anatomical details.
    ## Sometimes, it's in favor of convergence rate of mechanical solve

    # Extract elements around atrial caps and assign as a passive material
    ring = simulator.model.create_atrial_stiff_ring(radius=5)
    # material is stiff and value is arbitrarily chosen
    stiff_iso = Mat295(rho=0.001, iso=ISO(itype=-1, beta=2, kappa=10, mu1=0.1, alpha1=2))
    ring.meca_material = stiff_iso
    # assign default EP material as for atrial
    ring.ep_material = EPMaterial.Active()

    # Compute universal coordinates:
    simulator.compute_uhc()

    # Extract elements around atrialvenricular valves and assign as a passive material
    simulator.model.create_stiff_ventricle_base(stiff_material=stiff_iso)

    # Estimate the stress-free-configuration
    simulator.compute_stress_free_configuration()

    # Compute the conduction system
    simulator.compute_purkinje()
    simulator.compute_conduction_system()



.. GENERATED FROM PYTHON SOURCE LINES 146-148

Start main simulation
~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 148-153

.. code-block:: Python

    simulator.settings.mechanics.analysis.end_time = Quantity(800, "ms")
    simulator.settings.mechanics.analysis.dt_d3plot = Quantity(10, "ms")

    simulator.model.save_model(os.path.join(workdir, "heart_fib_beam.vtu"))


.. GENERATED FROM PYTHON SOURCE LINES 154-157

.. note::
   A constant pressure is prescribed to the atria.
   No circulation system is coupled with the atria.

.. GENERATED FROM PYTHON SOURCE LINES 157-162

.. code-block:: Python


    # start main simulation
    simulator.dyna_settings.num_cpus = 10
    simulator.simulate()


.. GENERATED FROM PYTHON SOURCE LINES 163-164

Result in LS-PrePost

.. GENERATED FROM PYTHON SOURCE LINES 166-172

.. only:: html

    .. video:: ../../_static/images/doc_Christobal01_epmeca_fh.mp4
      :width: 600
      :loop:
      :class: center


.. _sphx_glr_download_examples_simulator_doc_EP-mechanics_simulator_fullheart_rodero.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: doc_EP-mechanics_simulator_fullheart_rodero.ipynb <doc_EP-mechanics_simulator_fullheart_rodero.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: doc_EP-mechanics_simulator_fullheart_rodero.py <doc_EP-mechanics_simulator_fullheart_rodero.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: doc_EP-mechanics_simulator_fullheart_rodero.zip <doc_EP-mechanics_simulator_fullheart_rodero.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
